<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="question_text">Question Text</string>
    <string name="answer_text_a">Answer Text A</string>
    <string name="answer_text_b">Answer Text B</string>
    <string name="answer_text_c">Answer Text C</string>
    <string name="answer_text_d">Answer Text D</string>
    <string name="answer_text_e">Answer Text E</string>
    <string name="begin_quiz">Begin Quiz</string>
    <string name="options">Options</string>
    <string name="your_result_is">Your Result Is...</string>
    <string name="view_previous_results">View Previous Results</string>
    <string name="answer_text_f">Answer Text F</string>
</resources>